--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>게시물 리스트 페이지</title>
+    <style>
+        .layout {
+            width: 500px;
+            margin: 0 auto;
+            margin-top: 40px;
+        }
+    </style>
 </head>
-<style>
-
-    .layout{
-        width : 500px;
-        margin: 0 auto;
-        margin-top: 40px;
-    }
-</style>
 <body>
 
 <div class="layout">
@@ -24,7 +23,7 @@
         </thead>
         <tbody>
         <tr th:each="board : ${list}">
-            <td th:text="${board.id}">1</td>
+            <td th:text="${board.boardNumber}">1</td> <!-- 글번호를 boardNumber로 표시 -->
             <td>
                 <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"></a>
             </td>
@@ -32,11 +31,11 @@
         </tbody>
     </table>
     <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
-        <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page -1}, searchKeyword = ${param.searchKeyword})}" th:text="${page}"></a>
-        <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
+        <a th:if="${page != nowPage}" th:href="@{/board/list(page=${page - 1}, searchKeyword=${param.searchKeyword})}" th:text="${page}"></a>
+        <strong th:if="${page == nowPage}" th:text="${page}" style="color: red"></strong>
     </th:block>
     <form th:action="@{/board/list}" method="get">
-        <input type="text" name="searchKeyword">
+        <input type="text" name="searchKeyword" placeholder="검색어를 입력하세요">
         <button type="submit">검색</button>
     </form>
     <form th:action="@{/board/write}" method="get">
